...
            android:text="Player 1 Name: "
            android:textSize="30dp"
            />

        <EditText
            android:maxLines="1"
            android:id="@+id/p1"
            />

        <TextView
            android:text="Player 2 Name: "
            android:textSize="30dp"
            />

        <EditText
            android:maxLines="1"
            android:id="@+id/p2"
            />

    </GridLayout>

    <LinearLayout
        android:orientation="horizontal"
...
